--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,7 @@
     		</div>
             
             <div id="wrapper-title-2">
-            <a href="#"><div class="recent object">Most Recent</div></a>
+            <a href="#"><div class="recent object">Recent</div></a>
                 <div id="fleche-nav-2"></div>
     		</div>
             
