--- a/server/public/job-detail.html
+++ b/server/public/job-detail.html
@@ -15,9 +15,16 @@
 	<link href='style.css' rel='stylesheet' type='text/css'>
 	<link href='job-detail.css' rel='stylesheet' type='text/css'>
 
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
+	<script src="js/job-details.js" type="text/javascript"></script>
 
 </head>
+
+<script>
+
+
+</script>
 
 <body>
 
@@ -38,69 +45,97 @@
 </div>
 
 <!-- JOB DETAIL -->
-<div id="container-box">
-	<div id="map-box">
-		<div id="map"></div>
-	</div>
-	<div id="job-detail-container-box">
-		<div id="job-heading-column-container">
-			<div class="work">
-				<figure id="job-figure" class="white">
-					<a href="#">
-						<img src="img/psd-1.jpg" alt="" />
-					</a>	
-                            				<div id="wrapper-part-info">
-	                            				<div class="part-info-image">
-	                            					<img src="img/icon-psd.svg" alt="" width="28" height="28"/>
-	                            				</div>
-	                            				<div id="part-info">PSD Goodies</div>
-					</div>
-				</figure>
+<div id="wrapper-container">
+	<div id="container-box" class="container object">
+		<div id="main-container-image">
+			<div id="map-box">
+				<div id="map"></div>
 			</div>
-			<div id="job-title-container">
-				<div>
-					Image of Job Poster
-				</div>
-				<div>
-					Job Poster Name
-				</div>
-				<div>
-					$ Amount
-				</div>
-			</div>
-			<div id="job-details-row-ppl">
-				3/4 Fulfilled
-			</div>
-			<div id="job-details-row-completion">
-				Completion by 04/05/2018
-			</div>
-		</div>
-		<div id="job-detail-column-container">
-			<div id="job-name-row">
-				Job Name
-			</div>
-			<div id="job-skills-row">
-				Job Skills
-			</div>
-			<div id="job-poster-row">
-				Posted by Julian 18hr ago
-			</div>
-			<div id="job-description-row">
-				Job description
-			</div>
-			<div id="job-separator-row">
-			</div>
-			<div id="job-contact-action-container">
-				<div id="job-contact-column">
-					Julian Smith
-				</div>
-				<div id="job-action-column">
-					Action buttons here
-				</div>
-			</div>
-		</div>
-	</div>
+			<div id="job-detail-container-box">
+				<div id="job-heading-column-container">
+					<div class="work">
+						<figure id="job-figure" class="white">
+							<a href="#">
+								<img src="img/psd-1.jpg" alt="" />
+							</a>	
+		                            				<div id="wrapper-part-info shorter-wrapper">
+			                            				<div class="part-info-image">
+			                            					<img src="img/icon-psd.svg" alt="" width="28" height="28"/>
+			                            				</div>
+			                            				<div id="part-info">
+			                            					PSD Goodies
+									<div class="right-data">
+										<h3>$34</h3>
+										
+									</div>
 
+			                            				</div>
+			                            				
+
+							</div>
+							<div id="job-details">
+			                            				<div class="detail-text">
+			                            					<i class="fas fa-users details-icon">
+			                            					</i>
+			                            					3/4 Fulfilled
+			                            				</div>
+								<div  class="detail-text">
+									<i class="fas fa-stopwatch details-icon-time">
+			                            					</i>
+									Completion by 04/05/2018
+								</div>
+			                            			</div>
+						</figure>
+					</div>
+				</div>
+				<div id="job-detail-column-container" class="font-style">
+					<div id="job-name-row">
+						Job Name
+					</div>
+					<div id="job-skills-row">
+						<div class="skill orange">
+							CRAFTMANSHIP
+						</div>
+						<div class="skill pink">
+							GARDENING
+						</div>
+						<div class="skill cyan">
+							NEIGHBORHOOD MAINTENANCE
+						</div>
+					</div>
+					<div id="job-poster-row" class="light-gray">
+						Posted by Julian 18hr ago
+						<i class="far fa-clock details-icon-time">
+			                            		</i>
+					</div>
+					<div id="job-description-row">
+						<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus metus sit amet consectetur dapibus. Aenean consectetur nisl nisl. Mauris scelerisque quam at tincidunt egestas. Donec hendrerit lacus.
+						<br><br>
+						Duis id arcu massa. Suspendisse suscipit quis augue a dictum. Vivamus est lectus, ultrices ut quam quis, luctus fringilla nunc. Morbi eget nunc porttitor, sagittis massa sed, aliquet arcu. Praesent auctor nisl turpis, et pulvinar neque scelerisque at.
+						<p>
+					</div>
+					<div id="job-separator-row">
+					</div>
+					<div id="job-contact-action-container">
+						<div id="job-contact-column" class="light-gray">
+							<img src="img/icon-psd.svg" alt="" width="20" height="20"/>
+							Julian Smith
+							<div class="contact-details">
+								<p id="phone-number">718-678-8901</p>
+								<p id="email-address">jsmith@gmail.com</p>
+							</div>
+						</div>
+						<div id="job-action-column">
+							<button class="btn right-margin font-style" type="button"><span>FUND JOB</span></button>
+							<button class="btn font-style" type="button"><span>CLAIM JOB</span></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
 </div>
 
 <!-- SCRIPT -->
@@ -117,10 +152,10 @@
 	<script type="text/javascript" src="js/jquery.animate-colors-min.js"></script>
 	<script type="text/javascript" src="js/jquery.animate-shadow-min.js"></script>    
 	<script type="text/javascript" src="js/main.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-	<script src="js/job-detail.js" type="text/javascript"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANNoWpcaXbtXtxCOs5g0RSQfZpRqygsfw&callback=myMap"></script>
 
 <script>
+
 /* PRELOADER */
 
 function preloader() {
