Added 'Back to Home Page' a tag to job detail page; TODO:  link it correctly

--- a/server/public/job-detail.html
+++ b/server/public/job-detail.html
@@ -48,6 +48,15 @@
 <div id="wrapper-container">
 	<div id="container-box" class="container object">
 		<div id="main-container-image">
+			<!--TODO:  Link this up correctly-->
+			<a href="/index.html">
+				<div id="back-home" class="font-style">
+					<i class="fas fa-chevron-left details-icon-time">
+					</i>
+					Back to Home Page
+
+				</div>
+			</a>
 			<div id="map-box">
 				<div id="map"></div>
 			</div>
