Added job list endpoint

--- a/server/public/details.html
+++ b/server/public/details.html
@@ -1178,7 +1178,7 @@ textarea {
 
 <div id="wrapper-header">
 	<div id="main-header" class="object">
-		<a href="index.html"><div id="logo"><img src="img/logo-burst.svg" alt="logo burstfly" height="38" width="90"></div></a>
+		<a href="../views/index.html"><div id="logo"><img src="img/logo-burst.svg" alt="logo burstfly" height="38" width="90"></div></a>
         <div id="main_tip_search"> 
 			<form>
 				<input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
