Fixed link between back button and home page on job details page

--- a/server/public/job-detail.html
+++ b/server/public/job-detail.html
@@ -53,7 +53,7 @@
 	<div id="container-box" class="container object">
 		<div id="main-container-image">
 			<!--TODO:  Link this up correctly-->
-			<a href="/index.html">
+			<a href="index.html">
 				<div id="back-home" class="font-style">
 					<i class="fas fa-chevron-left details-icon-time">
 					</i>
