more form stuff

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -43,7 +43,7 @@
 		</div>
         
         <div id="stripes"></div>
-        <a href="addjob.html"><button id="new-job" class="button">Add a job</button></a>
+        <a href="add-job.html"><button id="new-job" class="button">Add a job</button></a>
     </div>
 </div>
 
@@ -53,7 +53,7 @@
 		<div class="navbar object">
     		<div id="wrapper-sorting">
             <div id="wrapper-title-1">
-                <div id="relevance" class="relevance object active" onClick="sort('relevance')">Relevance &#8594;</div>
+                <div id="relevance" class="relevance object active" onClick="sort('relevance')">Nearest &#8594;</div>
             	<div id="fleche-nav-1"></div>
     		</div>
             
