Adding a basic job claim confirmation page (may need more styles)

--- a/server/public/job-claim-confirmed.html
+++ b/server/public/job-claim-confirmed.html
@@ -65,7 +65,23 @@
 				</div>
 			</a>
 			<div>
-				<h1>Congratulations</h1>
+				<h1 class="font-style congrats">Congratulations!</h1>
+			</div>
+			<div>
+				<p class="font-style">
+					You have officially claimed hshhhd job.  Please view "Jobs" under "Your Account" in the upper right to view the job details and mark the job as completed!
+				</p>
+			</div>
+			<div id="job-separator-row">
+			</div>
+			<div class="form">
+				<p class="font-style">
+					Tell the community about yourself (optional):
+				</p>
+				<form>
+					<input class="description" type='text' />
+					<button class="btn submit-description"><span>SUBMIT</span></button>
+				</form>
 			</div>
 		</div>
 
