--- a/server/public/add-job.html
+++ b/server/public/add-job.html
@@ -159,7 +159,7 @@
                                     <div class="wrap-contact2-form-btn">
                                         <div class="contact2-form-bgbtn"></div>
                                         <button class="contact2-form-btn">
-                                            Send Your Message
+                                            Add Your Job
                                         </button>
                                     </div>
                                 </div>
