Adding additional text styling to job claim confirmation (animation?)

--- a/server/public/job-claim-confirmed.html
+++ b/server/public/job-claim-confirmed.html
@@ -68,7 +68,7 @@
 				<h1 class="font-style congrats">Congratulations!</h1>
 			</div>
 			<div>
-				<p class="font-style">
+				<p class="font-style description">
 					You have officially claimed hshhhd job.  Please view "Jobs" under "Your Account" in the upper right to view the job details and mark the job as completed!
 				</p>
 			</div>
