finalized job confirmation page

--- a/server/public/job-confirmed.html
+++ b/server/public/job-confirmed.html
@@ -71,9 +71,13 @@
                 <div class="row-box">
                     <img src="https://cdn.dribbble.com/users/35381/screenshots/3581033/partyturt.png">
                     <h3>Woohoo!</h3>
-                    
+                    <p>&nbsp;</p>
                     <p>
-                        Your job is now posted up on our website! 
+                        Your job is now posted up on our website, congrats!
+                    </p>
+                    <p>&nbsp;</p>
+                    <p>
+                        We'll send you an email as soon as someone in your community claims your job. Until then, hang tight! 
                     </p>
                 </div>
                 
