jk there's some more stuff

--- a/server/public/job-confirmed.html
+++ b/server/public/job-confirmed.html
@@ -73,7 +73,7 @@
                     <h3>Woohoo!</h3>
                     <p>&nbsp;</p>
                     <p>
-                        Your job is now posted up on our website, congrats!
+                        Your job is now posted up on our website, congrats! We've sent you an email with a direct link to edit your job, if you choose to remove it or make any changes. 
                     </p>
                     <p>&nbsp;</p>
                     <p>
