--- a/server/public/add-job.html
+++ b/server/public/add-job.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div id="stripes"></div>
-                <a href="addjob.html"><button id="new-job" class="button">Add a job</button></a>
+                <a href="add-job.html"><button id="new-job" class="button">Add a job</button></a>
             </div>
         </div>
 
