--- a/server/public/add-job.html
+++ b/server/public/add-job.html
@@ -48,7 +48,7 @@
 
                 </div>
 
-
+                <a href="profile.html"><img id="profpic" src="img/new/profile-images/5.jpg"></a>
                 <div id="main_tip_search"> 
                     <form>
                         <input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
