job description page

--- a/server/public/job-claim-confirmed.html
+++ b/server/public/job-claim-confirmed.html
@@ -39,7 +39,7 @@
 <div id="wrapper-header">
 	<div id="main-header" class="object">
 		<div class="logo">
-            Counity
+            Co.unity
 <!--            <img src="img/new/logo.svg" alt="logo platz" style="height: 20%;">-->
         
         </div>
