Adding the account page for the job poster

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -45,7 +45,10 @@
 		<div id="stripes"></div>
 		<a href="addjob.html"><button id="new-job" class="button">Add a job</button></a>
 		<div id="user-account">
-			<i class="fas fa-user-circle"></i>
+			<a href="account-job-poster.html" id="account-a-tag">
+				<i class="fas fa-user-circle">
+				</i>
+			</a>
 		</div>
 	</div>
 </div>
