Propagating some more footers across the HTML pages

--- a/server/public/job-claim-confirmed.html
+++ b/server/public/job-claim-confirmed.html
@@ -86,7 +86,51 @@
 		</div>
 
 	</div>
-	<div class="footer-margin">
+	<div class="sm-footer-margin">
+	</div>
+
+	<div id="main-container-footer">
+		<div class="container-footer">
+			
+			<div id="row-1f">
+				<div class="text-row-1f"><span style="font-weight:600;font-size:15px;color:#666;line-height:250%;text-transform:uppercase;letter-spacing:1.5px;">What we do</span><br>We aim to foster social inclusion within our local communities by providing temporary jobs to those who need them.</div>
+			</div>
+			
+			<div id="row-2f">
+				<div class="text-row-2f"><span style="font-weight:600;font-size:15px;color:#666;line-height:250%;text-transform:uppercase;letter-spacing:1.5px;">See a job you like?</span><br>Claim it and complete it, and you'll get a gift card for the great work you did!</div>
+			</div>
+			
+			<div id="row-3f">
+				<div class="text-row-3f"><span style="font-weight:600;font-size:15px;color:#666;line-height:250%;text-transform:uppercase;letter-spacing:1.5px;">Need a job done?</span><br>Create a job and someone in your community will be at your aid!</div>
+			</div>
+			
+			<div id="row-4f">
+				<div class="text-row-4f"><span style="font-weight:600;font-size:15px;color:#666;line-height:250%;text-transform:uppercase;letter-spacing:1.5px;">Newsletter</span><br>You will be informed monthly about the latest content avalaible.</div>
+
+				<div id="main_tip_newsletter"> 
+					<form>
+						<input type="text" name="newsletter" id="tip_newsletter_input" list="newsletter" autocomplete=off required>
+					</form>
+				</div>
+			</div>
+			
+		</div>
+	</div>
+	
+	
+	<div id="wrapper-copyright">
+		<div class="copyright">
+			<div class="copy-text object">Copyright © 2018. </div>
+			
+			<div class="wrapper-navbouton">
+<!--
+				<div class="google object">g</div>
+				<div class="facebook object">f</div>
+				<div class="linkin object">i</div>
+				<div class="dribbble object">d</div>
+-->
+			</div>
+		</div>
 	</div>
 </div>
 
