--- a/server/public/job-confirmed.html
+++ b/server/public/job-confirmed.html
@@ -94,7 +94,7 @@
                     </div>
 
                     <div id="row-2f">
-                        <div class="text-row-2f"><span style="font-weight:600;font-size:15px;color:#666;line-height:250%;text-transform:uppercase;letter-spacing:1.5px;">See a job you like?</span><br>Claim it and complete it, and you'll get a gift card for your the great work you did!</div>
+                        <div class="text-row-2f"><span style="font-weight:600;font-size:15px;color:#666;line-height:250%;text-transform:uppercase;letter-spacing:1.5px;">See a job you like?</span><br>Claim it and complete it, and you'll get a gift card for the great work you did!</div>
                     </div>
 
                     <div id="row-3f">
