--- a/server/public/job-confirmed.html
+++ b/server/public/job-confirmed.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" href="/img/small-logo-01.png">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,900,900italic,700italic,700,500italic,400italic,500,300italic,300' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-        <link href='add-job.css' rel='stylesheet' type='text/css'>
+        <link href='/add-job.css' rel='stylesheet' type='text/css'>
 
 
         <!--    links for form styling-->
@@ -26,7 +26,7 @@
         <link rel="stylesheet" type="text/css" href="/css-form/main.css">
 
         <!--     google api key -->
-        <script src="/https://maps.googleapis.com/maps/api/js?key=AIzaSyANNoWpcaXbtXtxCOs5g0RSQfZpRqygsfw&libraries=places"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANNoWpcaXbtXtxCOs5g0RSQfZpRqygsfw&libraries=places"></script>
 
 
     </head>
@@ -51,7 +51,7 @@
             <div id="main-container-image">
 
                 <div class="row-box">
-                    <img src="/https://cdn.dribbble.com/users/35381/screenshots/3581033/partyturt.png">
+                    <img src="https://cdn.dribbble.com/users/35381/screenshots/3581033/partyturt.png">
                     <h3>Woohoo!</h3>
                     <p>&nbsp;</p>
                     <p>
@@ -345,7 +345,7 @@
         <script src="/js-form/main.js"></script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="/https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
