adding profpic to nav

--- a/server/public/index-static.html
+++ b/server/public/index-static.html
@@ -36,7 +36,7 @@
 		</div>
 
 
-		<div id="main_tip_search">
+		<div id="main_tip_search" style="margin-right: 65px;">
 			<form>
 				<input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
 			</form>
