--- a/server/public/job-claim-confirmed.html
+++ b/server/public/job-claim-confirmed.html
@@ -43,12 +43,20 @@
 <!--            <img src="img/new/logo.svg" alt="logo platz" style="height: 20%;">-->
         
         </div>
-        <div id="main_tip_search"> 
-			<form>
-				<input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
-			</form>
-		</div>
+        <div id="main_tip_search" style="margin-right: 65px;">
+            <form>
+                <input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
+            </form>
+        </div>
+
         <div id="stripes"></div>
+        <a href="add-job.html"><button id="new-job" class="button">Add a job</button></a>
+        <div id="user-account">
+            <a href="../views/account-job-poster.html" id="account-a-tag">
+                <i class="fas fa-user-circle">
+                </i>
+            </a>
+        </div>
     </div>
 </div>
 
