Fixed cancel reload button on two pages, styled cancel button on account claimer page, and linked 'CLAIM JOB' button to the job-claim-confirmed html page

--- a/server/public/account-job-claimer.html
+++ b/server/public/account-job-claimer.html
@@ -136,13 +136,14 @@
 					                            			</div>
 					                            			<div id="job-completion-form" class="inactive-completion completion-form">
 					                            				<form>
+					                            					
+					                            					<input class="submission-text" type="text">
+					                            					</input>
 					                            					<div id="cancel-action">
-							                            				<button onclick="cancelCompletedForm()">
+							                            				<button onclick="cancelCompletedForm()" class="button-no-style cancel-button">
 							                            					Cancel
 							                            				</button>
 							                            			</div>
-					                            					<input class="submission-text" type="text">
-					                            					</input>
 					                            				</form>
 					                            			</div>
 
