--- a/server/public/job-detail.html
+++ b/server/public/job-detail.html
@@ -156,8 +156,9 @@
 							</form>
 							<button onclick="fundJob()" class="btn right-margin font-style" type="button" id="fund-job-btn"><span>FUND JOB</span>
 							</button>
-							
-							<button class="btn font-style" type="button"><span>CLAIM JOB</span></button>
+							<a href="job-claim-confirmed.html">
+								<button class="btn font-style btn-height-taller" type="button"><span>CLAIM JOB</span></button>
+							</a>
 						</div>
 					</div>
 				</div>
