--- a/server/public/job-review.html
+++ b/server/public/job-review.html
@@ -45,8 +45,7 @@
 
             </div>
 
-            <a href="profile.html"><img id="profpic" src="img/new/profile-images/5.jpg"></a>
-            <div id="main_tip_search"> 
+            <div id="main_tip_search" style="margin-right: 65px;">
                 <form>
                     <input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
                 </form>
@@ -54,6 +53,12 @@
 
             <div id="stripes"></div>
             <a href="add-job.html"><button id="new-job" class="button">Add a job</button></a>
+            <div id="user-account">
+                <a href="../views/account-job-poster.html" id="account-a-tag">
+                    <i class="fas fa-user-circle">
+                    </i>
+                </a>
+            </div>
         </div>
     </div>
 
