--- a/server/public/job-detail.html
+++ b/server/public/job-detail.html
@@ -37,11 +37,12 @@
 
 <div id="wrapper-header">
 	<div id="main-header" class="object">
-		<div class="logo">
-            Counity
-<!--            <img src="img/new/logo.svg" alt="logo platz" style="height: 20%;">-->
-        
+        <div class="logo">
+            Co.unity - <span id="title-description">helping your community help you</span>
+            <!--            <img src="img/new/logo.svg" alt="logo platz" style="height: 20%;">-->
+
         </div>
+
         <div id="main_tip_search" style="margin-right: 65px;">
             <form>
                 <input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
