Added linking between job boxes and job detail page for job claimer account page

--- a/server/public/account-job-claimer.html
+++ b/server/public/account-job-claimer.html
@@ -94,6 +94,7 @@
 					<div id="job-detail-container-box">
 						<div id="job-heading-column-container">
 							<div class="work">
+								<a href="job-detail.html">
 								<figure class="white">
 									<div class="job-due-reminder-container font-style-white">
 										<p class="min-margins">
@@ -104,7 +105,7 @@
 										</p>
 									</div>
 									
-									<a href="#">
+									<a href="job-detail.html">
 										<img src="img/psd-1.jpg" alt="" />
 									</a>	
 				                            				<div id="wrapper-part-info shorter-wrapper">
@@ -155,6 +156,8 @@
 											</p>
 									</button>
 								</figure>
+							</a>
+							<a href="job-detail.html">
 								<figure class="white">
 									<div class="job-due-reminder-container font-style-white">
 										<p class="min-margins">
@@ -164,7 +167,7 @@
 											2d 14hr left
 										</p>
 									</div>
-									<a href="#">
+									<a href="job-detail.html">
 										<img src="img/psd-1.jpg" alt="" />
 									</a>	
 				                            				<div id="wrapper-part-info shorter-wrapper">
@@ -202,6 +205,7 @@
 										</p>
 									</div>
 								</figure>
+							</a>
 							</div>
 						</div>
 					</div>
