--- a/server/public/account-job-claimer.html
+++ b/server/public/account-job-claimer.html
@@ -39,7 +39,7 @@
 		</div>
 		
 		
-		<div id="main_tip_search" style="margin-right: 60px;"> 
+		<div id="main_tip_search"> 
 			<form>
 				<input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
 			</form>
