Adding an imaginary story about needing bushes trimmed on a property to the job details page

--- a/server/public/job-detail.html
+++ b/server/public/job-detail.html
@@ -80,14 +80,14 @@
 					<div class="work">
 						<figure id="job-figure" class="white">
 							<a href="#">
-								<img src="img/psd-1.jpg" alt="" />
+								<img src="img/new/profile-images/job6.jpg" alt="" />
 							</a>	
 		                            				<div id="wrapper-part-info shorter-wrapper">
 			                            				<div class="part-info-image">
-			                            					<img src="img/icon-psd.svg" alt="" width="28" height="28"/>
+			                            					<img src="img/new/profile-images/7.jpg" alt="" width="28" height="28"/>
 			                            				</div>
 			                            				<div id="part-info">
-			                            					PSD Goodies
+			                            					Trimming hedges
 									<div class="right-data">
 										<h3>$34</h3>
 										
@@ -114,11 +114,11 @@
 				</div>
 				<div id="job-detail-column-container" class="font-style">
 					<div id="job-name-row">
-						Job Name
+						Trimming hedges
 					</div>
 					<div id="job-skills-row">
 						<div class="skill orange">
-							CRAFTMANSHIP
+							LANDSCAPING
 						</div>
 						<div class="skill pink">
 							GARDENING
@@ -134,9 +134,9 @@
 					</div>
 					<div id="job-description-row">
 						<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus metus sit amet consectetur dapibus. Aenean consectetur nisl nisl. Mauris scelerisque quam at tincidunt egestas. Donec hendrerit lacus.
+						Hello!  I am looking for someone to trim my hedges next weekend.  I have all the necessary equipment, but I'll be busy next weekend.
 						<br><br>
-						Duis id arcu massa. Suspendisse suscipit quis augue a dictum. Vivamus est lectus, ultrices ut quam quis, luctus fringilla nunc. Morbi eget nunc porttitor, sagittis massa sed, aliquet arcu. Praesent auctor nisl turpis, et pulvinar neque scelerisque at.
+						I estimate the job will take 3 hours.  I will be at home and can be asked any questions during the job.  I'm hoping 4 people could team up to complete this task.  I have four bushes in the front of my house and 8 in the back.  I have two shears and two ladders.  I imagine two people can do the trimming and the other two could do the cleanup. Please claim the job if you're interested!
 						<p>
 					</div>
 					<div id="job-separator-row">
